--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>Certa vez eu ouvi alguém dizer:</head>
- <tittle>Melhor frase do melhor livro</tittle>
+ <tittle>"Melhor frase do melhor livro"</tittle>
     <body>
-     <h1>O Pequeno Príncipe</h1>
+      <tittle>"Melhor frase do melhor livro"</tittle>
+         <h1>O Pequeno Príncipe</h1>
       <p>“ Aqueles que passam por nós, não vão sós, não nos deixam sós. Deixam um pouco de si, levam um pouco de nós."</p>
                                       <p>Antoine de Saint-Exupéry</p>
       
