--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>Certa vez eu ouvi alguém dizer:</head>
- <tittle>"Melhor frase do melhor livro"</tittle>
+ <tittle>Melhor frase do melhor livro</tittle>
     <body>
       <tittle>"Melhor frase do melhor livro"</tittle>
          <h1>O Pequeno Príncipe</h1>
