--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
-<head>Certa vez eu ouvi alguém dizer:</head>
+<head>Certa vez eu ouvi alguém dizer:
+ <tittle>Melhor frase do melhor livro</tittle>
+ </head>
  <tittle>Melhor frase do melhor livro</tittle>
     <body>
       <h1>O Pequeno Príncipe</h1>
