--- a/index3.html
+++ b/index3.html
@@ -2,9 +2,8 @@
 
  <head>
   <title>Música</title>
-   <link rel="stylesheet" href="externoindex2.css">
    <style> 
-       body { color: #33374B; }
+       body { color: #F8339A; }
        p  { font-family: arial; }
    </style>
    
