--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
  <head>
   <title>Música</title>
    <style> 
-       body { color: #F8339A; }
+       body { color: #3AA9E2; }
        p  { font-family: arial; }
    </style>
    
